# windcast

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.agents/code-reviews/: pass11-model-registry.md
.claude/: PRD.md  STATUS.md
.claude/docs/: autogluon-patterns.md  autogluon-vs-manual-tradeoffs.md  energy-demand-datasets.md  ml-pipeline-patterns.md  openmeteo-patterns.md  polars-patterns.md  pydantic-settings-patterns.md  pyproject-stack.md  solar-pv-datasets.md
.claude/plans/: experiment-lineage-schema.md  fix-era5-leak-wattcast-port.md  ingest-kelmarsh-real-data.md  integrate-mlforecast.md  mlflow-stepped-horizon-metrics.md  pass11-model-registry.md  pass2-build-features-train-baseline.md  pass4-weather-provider-layer.md  pass6-autogluon-tabular.md  pass7-rte-france-demand.md  pass7-spain-demand-run.md  per-dataset-split-config.md  phase-1-1-project-setup.md  phase-1-2-data-ingestion.md  phase-1-3-wind-features-ml.md  phase-2-demand-domain.md  phase-3-solar-domain.md  training-harness-mlflow-lineage.md
.claude/reference/: forecasting-libraries-landscape.md  kelmarsh-real-data-patterns.md  ml-backends-comparison.md  mlforecast-patterns.md  (+3 more)
docs/: README.md  data-ingestion.md  mlflow-ui-setup.md  rte-api-notes.md
scripts/: annotate_mlflow_runs.py  backfill_stepped_metrics.py  build_features.py  compare_runs.py  evaluate.py  fetch_historical_forecasts.py  ingest_kelmarsh.py  ingest_pvdaq.py  ingest_rte_france.py  ingest_spain_demand.py  log_tso_baseline.py  train.py  train_autogluon.py  train_mlforecast.py
tests/: test_config.py  test_setup.py  test_tracking.py
(+95 files in other folders)
