[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "windcast"
version = "0.1.0"
description = "Standardized ML framework for wind power forecasting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    # Data processing
    "polars>=1.0",
    # ML
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    # Experiment tracking
    "mlflow>=2.10",
    # Hyperparameter tuning
    "optuna>=3.0",
    # Weather data
    "openmeteo-requests>=1.3",
    "requests-cache>=1.0",
    "retry-requests>=2.0",
    # Config
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "PERF", # perflint
    "RUF",  # ruff-specific
]
ignore = [
    "N803",  # argument name should be lowercase (ML convention: X, X_train)
    "N806",  # variable in function should be lowercase (ML convention: X)
]

[tool.ruff.lint.isort]
known-first-party = ["windcast"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
